@@ -66,4 +66,26 @@ describe( 'AccountDetails', () => {
 
 		expect( screen.queryByTestId( 'help' ) ).toBeInTheDocument();
 	} );
+
+	it( 'renders the warning icon and the paragraph with the "warning" class when there\'s a warning message', () => {
+		const mockedWarningMessage = 'Warning: random message';
+		useAccount.mockReturnValue( {
+			data: {
+				account: {
+					settings: {
+						payouts: {},
+					},
+					payouts_enabled: false,
+					charges_enabled: false,
+				},
+				webhook_status_message: mockedWarningMessage,
+			},
+		} );
+		render( <AccountDetails /> );
+
+		expect( screen.queryByTestId( 'warning' ) ).toBeInTheDocument();
+		expect( screen.queryByText( mockedWarningMessage ) ).toHaveClass(
+			'warning'
+		);
+	} );
 } );
