@@ -2,8 +2,8 @@ import { __ } from '@wordpress/i18n';
 import { createInterpolateElement } from '@wordpress/element';
 import React from 'react';
 import { Button, ExternalLink, Icon } from '@wordpress/components';
+import { help, warning } from '@wordpress/icons';
 import interpolateComponents from 'interpolate-components';
-import { help } from '@wordpress/icons';
 import styled from '@emotion/styled';
 import useWebhookStateMessage from './use-webhook-state-message';
 import SectionStatus from './section-status';
@@ -41,10 +41,32 @@ const Label = styled.p`
 	margin: 0;
 `;
 
-const WebhookDescription = styled.div`
+const WebhookDescriptionWrapper = styled.div`
 	font-size: 12px;
 	font-style: normal;
 	color: rgb( 117, 117, 117 );
+
+	> span {
+		align-self: center;
+	}
+
+	p.warning {
+		background-color: #fcf9e8;
+		color: #674600;
+		padding: 4px 8px;
+		border-radius: 2px;
+	}
+`;
+
+const WebhookDescription = styled.div`
+	display: flex;
+	align-items: center;
+`;
+
+const WarningIcon = styled( Icon )`
+	fill: #674600;
+	padding: 5px;
+	margin: 1em 0;
 `;
 
 const AccountDetailsError = styled.p`
@@ -125,6 +147,7 @@ const WebhooksSection = () => {
 	);
 
 	const { message, requestStatus, refreshMessage } = useWebhookStateMessage();
+	const isWarningMessage = message?.includes( 'Warning: ' ) || false;
 
 	return (
 		<>
@@ -136,20 +159,29 @@ const WebhooksSection = () => {
 						: __( 'Disabled', 'woocommerce-gateway-stripe' ) }
 				</SectionStatus>
 			</AccountSection>
-			<WebhookDescription>
+			<WebhookDescriptionWrapper>
 				{ ! isWebhookSecretEntered && <WebhookInformation /> }
-				<p>
-					{ message }{ ' ' }
-					<Button
-						disabled={ requestStatus === 'pending' }
-						onClick={ refreshMessage }
-						isBusy={ requestStatus === 'pending' }
-						isLink
-					>
-						{ __( 'Refresh', 'woocommerce-gateway-stripe' ) }
-					</Button>
-				</p>
-			</WebhookDescription>
+				<WebhookDescription
+					className={ isWebhookSecretEntered ? 'expanded' : '' }
+				>
+					{ isWarningMessage && (
+						<span data-testid="warning">
+							<WarningIcon icon={ warning } size="16" />
+						</span>
+					) }
+					<p className={ isWarningMessage ? 'warning' : '' }>
+						{ message }{ ' ' }
+						<Button
+							disabled={ requestStatus === 'pending' }
+							onClick={ refreshMessage }
+							isBusy={ requestStatus === 'pending' }
+							isLink
+						>
+							{ __( 'Refresh', 'woocommerce-gateway-stripe' ) }
+						</Button>
+					</p>
+				</WebhookDescription>
+			</WebhookDescriptionWrapper>
 		</>
 	);
 };
